--- a/style.css
+++ b/style.css
@@ -562,17 +562,17 @@
 	gap: 16px;
     white-space: nowrap;
     overflow-x: hidden; }
-    .content-menu__menu-wrapper--list-item {
+    .content-menu__list-item {
       font-size: 16px;
       line-height: 150%;
       letter-spacing: -0.2px;
       color: #7E7E82;
       padding: 8px 16px; }
-    .content-menu__menu-wrapper--list-item--active {
+    .content-menu__list-item--active {
       background: #FFFFFF;
       border: 2px solid #B8FFEC;
       border-radius: 6px; }
-	  .content-menu__menu-wrapper--list-a {
+	  .content-menu__list-a {
 		  color: #7E7E82;
 		  text-decoration: none;
 	  }
