--- a/style.css
+++ b/style.css
@@ -417,7 +417,12 @@
   .mobile-menu__logo {
     position: relative;
     padding-right: 16px;
-    margin-right: auto; }
+    margin-right: auto;
+    display: flex;
+    align-items: center;  }
+    .mobile-menu__link {
+      padding-right: 16px;
+    }
     .mobile-menu__logo-image {
       height: 50px;
       width: auto; }
@@ -478,13 +483,10 @@
     .tablet-menu {
       display: flex;
       padding-right: 20px;
-	  gap: 16px;
-      position: relative; }
+      gap: 16px;
+      align-items: center; }
     .tablet-menu:after {
       content: "";
-      position: absolute;
-      right: 0;
-      top: calc(50% - 16px);
       width: 2px;
       height: 32px;
       background: #EAEAEA; } }
@@ -626,8 +628,9 @@
 
 .content-main__btn-link {
   margin: 16px 16px;
-  position: relative;
-  padding-left: 32px;
+  padding: 0;
+  display: flex;
+  align-items: center;	
   background: transparent;
   border: none;
   font-size: 16px;
@@ -639,11 +642,8 @@
 display: block;}
   .content-main__btn-link:before {
     content: "";
-    position: absolute;
     width: 24px;
     height: 24px;
-    top: 0;
-    left: 0;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M14.5001 7.50008L12.0001 10.0001L9.50008 7.50008C9.22393 7.22393 8.77622 7.22393 8.50008 7.50008C8.22393 7.77622 8.22393 8.22393 8.50008 8.50008L11.293 11.293C11.6835 11.6835 12.3167 11.6835 12.7072 11.293L15.5001 8.50008C15.7762 8.22393 15.7762 7.77622 15.5001 7.50008C15.2239 7.22393 14.7762 7.22393 14.5001 7.50008ZM14.5001 13.5001L12.0001 16.0001L9.50008 13.5001C9.22393 13.2239 8.77622 13.2239 8.50008 13.5001C8.22393 13.7762 8.22393 14.2239 8.50008 14.5001L11.293 17.293C11.6835 17.6835 12.3167 17.6835 12.7072 17.293L15.5001 14.5001C15.7762 14.2239 15.7762 13.7762 15.5001 13.5001C15.2239 13.2239 14.7762 13.2239 14.5001 13.5001Z' fill='%2341F6D7'/%3E%3C/svg%3E");
     background-size: contain;
     background-repeat: no-repeat;
