--- a/slider.css
+++ b/slider.css
@@ -409,7 +409,14 @@
 .brand-slider__wrapper {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 8px; }
+  margin: 0 8px;
+  row-gap: 16px;
+  column-gap: 32px;  }
+  @media (min-width: 425px) {
+	.brand-slider__wrapper {
+	  transform: translate3d(0, 0px, 0px) !important;
+	}
+  }
   @media (min-width: 769px) {
     .brand-slider__wrapper {
       margin: 0 24px; } }
@@ -419,14 +426,17 @@
     border-radius: 6px;
     display: flex;
     justify-content: space-between;
+	align-items: center;
     padding: 16px;
-    margin: 8px;
-    width: calc(100% - 0px); }
+    /*margin: 8px;*/
+    width: calc(100% - 0px);
+	min-width: 240px;
+    box-sizing: border-box;  }
     .brand-slider__item:nth-child(n+2) {
       display: none; }
     @media (min-width: 376px) {
       .brand-slider__item {
-        width: calc(50% - 50px); }
+        width: calc(50% - 24px); }
         .brand-slider__item:nth-child(n+2) {
           display: flex; }
         .brand-slider__item:nth-child(n+3) {
@@ -437,7 +447,7 @@
           display: none; } }
     @media (min-width: 540px) {
       .brand-slider__item {
-        width: calc(33% - 50px); }
+        width: calc(33% - 24px)!important; }
         .brand-slider__item:nth-child(n+5) {
           display: flex; }
         .brand-slider__item:nth-child(n+6) {
@@ -446,7 +456,7 @@
           display: none; } }
     @media (min-width: 769px) {
       .brand-slider__item {
-        width: calc(25% - 50px); }
+        width: calc(25% - 24px)!important; }
         .brand-slider__item:nth-child(n+7) {
           display: flex; }
         .brand-slider__item:nth-child(n+8) {
@@ -523,7 +533,10 @@
     transition-property: transform;
     box-sizing: content-box;
     flex-wrap: nowrap;
-    margin: 0; }
+    margin: 0 16px 0 16px; }
+	.swiper-initialized .swiper-pagination {
+		margin: 0 16px 0 16px;
+		white-space: nowrap;  }
     .swiper-initialized .brand-slider__item {
       flex-shrink: 0;
       width: 100%;
@@ -535,7 +548,8 @@
       .swiper-initialized .brand-slider__item:nth-child(n) {
         display: flex; }
       .swiper-initialized .brand-slider__item-picture {
-        height: 30px;
+        height: auto;
+		max-height: 30px;
         width: auto; }
   .swiper-initialized .brand-slider__more {
     display: none; }
